fix: slideshows are now in english to not ask the user to translate the webpage
Signed-off-by: Glenn <glenn@not-tech.support>

--- a/src/templates/skeleton.html
+++ b/src/templates/skeleton.html
@@ -1,7 +1,7 @@
 {% load static tailwind_tags %}
 <!DOCTYPE html>
 
-<html lang="nb">
+<html lang="{% block lang %}nb{% endblock %}">
 	<head>
     <title>{{ settings.APP_NAME }} - {% block title %}Hjem{% endblock %}</title>
 		<meta charset="UTF-8">
