--- a/src/templates/viewer/template.html
+++ b/src/templates/viewer/template.html
@@ -1,5 +1,7 @@
 {% extends 'skeleton.html' %}
 
+{% block lang %}en{% endblock %}
+
 {% load static %}
 {% block head %}
   <script src="{% static 'js/viewer/window_fit.js' %}"></script>
